# MLOps

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_server.py
.dvc/: config
bank_personal_loan_modelling/: infer.py  train.py  utils.py
configs/: config.yaml
data/: .gitignore  predict.csv.dvc  test.csv.dvc  train.csv.dvc
dataset/: test.csv  train.csv
models/: model.cbm  model.cbm.dvc
